Initial ASM bytecode generation state